<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="title_playlistmaker">Playlist maker</string>
    <string name="button_search">Поиск</string>
    <string name="button_medialibrary">Медиатека</string>
    <string name="button_setting">Настройки</string>

    <string name="title_settings">Настройки</string>
    <string name="item_dark_theme">Темная тема</string>
    <string name="item_share_app">Поделиться приложением</string>
    <string name="item_write_support">Написать в поддержку</string>
    <string name="item_agreement">Пользовательское соглашение</string>

    <string name="title_search">Поиск</string>
    
    <string name="link_android_course">https://practicum.yandex.ru/android-developer/</string>
    <string name="message">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="link_offer">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="email">teplovilha@ya.ru</string>

    <string name="nothing_found">Ничего не нашлось</string>
    <string name="communication_problem">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="update">Обновить</string>

    <string name="you_searched">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>

    <string name="time_play_track">0:00</string>
</resources>
