<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/whiteBackground">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/bBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:padding="12dp"
            android:src="@drawable/ic_back_arrow_24"
            app:tint="@color/arrow"/>
        <TextView
            android:id="@+id/bSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:drawablePadding="@dimen/icon_padding"
            android:text="@string/title_settings"
            android:textColor="@color/text"
            android:textSize="@dimen/text_size"
            android:fontFamily="@font/ys_display_medium"/>
    </LinearLayout>

    <TextView
        android:id="@+id/bDarktheme"
        android:text="@string/item_dark_theme"
        style="@style/SettingTextViewStyle"
        app:drawableRightCompat="@drawable/ic_control_39_25"
        app:drawableTint="@color/switcher"/>

    <TextView
        android:id="@+id/bShareapp"
        android:text="@string/item_share_app"
        style="@style/SettingTextViewStyle"
        app:drawableRightCompat="@drawable/ic_share_24" />

    <TextView
        android:id="@+id/bWritesupport"
        android:text="@string/item_write_support"
        style="@style/SettingTextViewStyle"
        app:drawableRightCompat="@drawable/ic_support_24" />

    <TextView
        android:id="@+id/bUseragreement"
        android:text="@string/item_agreement"
        style="@style/SettingTextViewStyle"
        app:drawableRightCompat="@drawable/ic_agreement_24" />

</LinearLayout>