<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainscreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    android:paddingHorizontal="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/title_playlistmaker"
        android:layout_marginVertical="16dp"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        android:fontFamily="@font/ys_display_medium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="24dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/bSearch"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:cardCornerRadius="@dimen/card_radius"
            style="@style/CardStyle">
            <TextView
                android:text="@string/button_search"
                style="@style/CardTextViewStyle"
                app:drawableLeftCompat="@drawable/ic_search_24" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/bMedialibrary"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginVertical="16dp"
            app:cardCornerRadius="@dimen/card_radius"
            style="@style/CardStyle">
            <TextView
                android:text="@string/button_medialibrary"
                style="@style/CardTextViewStyle"
                app:drawableLeftCompat="@drawable/ic_medialibrary_24" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/bSettings"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/CardStyle"
            app:cardCornerRadius="@dimen/card_radius"
            >
            <TextView
                android:text="@string/button_setting"
                style="@style/CardTextViewStyle"
                app:drawableLeftCompat="@drawable/ic_settings_24" />
        </androidx.cardview.widget.CardView>



    </LinearLayout>
</LinearLayout>