<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/whiteBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextAppearance="@style/ToolBarTextStyle"
        app:contentInsetStartWithNavigation="0dp"
        app:titleMarginStart="4dp"
        app:navigationIcon="@drawable/ic_back_arrow_24"
        app:navigationIconTint="@color/arrow"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintGuide_begin="24dp"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_end="24dp"/>

            <ImageView
                android:id="@+id/cover"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                android:layout_marginTop="26dp"
                tools:src="@drawable/ic_placeholder_45" />

            <TextView
                android:id="@+id/track_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cover"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                android:layout_marginTop="24dp"
                android:textSize="22sp"
                android:fontFamily="@font/ys_display_medium"
                android:textColor="@color/trackListParametrs"
                tools:text="Yesterday (Remastered 2009)" />

            <TextView
                android:id="@+id/track_artist"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/track_name"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                android:layout_marginTop="12dp"
                android:textSize="14sp"
                android:fontFamily="@font/ys_display_medium"
                android:textColor="@color/trackListParametrs"
                tools:text="The Beatles " />

            <ImageView
                android:id="@+id/action_play"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/track_artist"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                android:layout_marginTop="30dp"
                android:src="@drawable/ic_play_100" />

            <ImageView
                android:id="@+id/add_track"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/action_play"
                app:layout_constraintBottom_toBottomOf="@id/action_play"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                android:src="@drawable/ic_add_track_51" />

            <ImageView
                android:id="@+id/like_track"
                android:layout_width="51dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/action_play"
                app:layout_constraintBottom_toBottomOf="@id/action_play"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                android:src="@drawable/ic_like_track_51" />

            <TextView
                android:id="@+id/track_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/action_play"
                app:layout_constraintStart_toStartOf="@id/left_guideline"
                app:layout_constraintEnd_toEndOf="@id/right_guideline"
                android:layout_marginTop="4dp"
                android:textSize="14sp"
                android:fontFamily="@font/ys_display_medium"
                android:textColor="@color/trackListParametrs"
                android:text="@string/time_play_track"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline_property"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintGuide_begin="16dp"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guideline_property"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintGuide_end="16dp"/>

            <TextView
                android:id="@+id/track_duration_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/track_time"
                app:layout_constraintStart_toStartOf="@id/left_guideline_property"
                style="@style/TrackInformationTitle"
                android:layout_marginTop="30dp"
                android:text="@string/duration"/>

            <TextView
                android:id="@+id/track_duration_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/track_duration_title"
                app:layout_constraintBottom_toBottomOf="@id/track_duration_title"
                app:layout_constraintEnd_toEndOf="@id/right_guideline_property"
                style="@style/TrackInformationValue"
                tools:text="5:35"/>

            <TextView
                android:id="@+id/track_album_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/track_duration_title"
                app:layout_constraintStart_toStartOf="@id/left_guideline_property"
                style="@style/TrackInformationTitle"
                android:text="@string/album"/>

            <TextView
                android:id="@+id/track_album_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/track_album_title"
                app:layout_constraintBottom_toBottomOf="@id/track_album_title"
                app:layout_constraintEnd_toEndOf="@id/right_guideline_property"
                style="@style/TrackInformationValue"
                tools:text="Yesterday (Remastered 2009)"/>

            <TextView
                android:id="@+id/track_year_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/track_album_title"
                app:layout_constraintStart_toStartOf="@id/left_guideline_property"
                style="@style/TrackInformationTitle"
                android:text="@string/year"/>

            <TextView
                android:id="@+id/track_year_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/track_year_title"
                app:layout_constraintBottom_toBottomOf="@id/track_year_title"
                app:layout_constraintEnd_toEndOf="@id/right_guideline_property"
                style="@style/TrackInformationValue"
                tools:text="1965"/>

            <TextView
                android:id="@+id/track_genre_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/track_year_title"
                app:layout_constraintStart_toStartOf="@id/left_guideline_property"
                style="@style/TrackInformationTitle"
                android:text="@string/genre"/>

            <TextView
                android:id="@+id/track_genre_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/track_genre_title"
                app:layout_constraintBottom_toBottomOf="@id/track_genre_title"
                app:layout_constraintEnd_toEndOf="@id/right_guideline_property"
                style="@style/TrackInformationValue"
                tools:text="Rock"/>

            <TextView
                android:id="@+id/track_country_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/track_genre_title"
                app:layout_constraintStart_toStartOf="@id/left_guideline_property"
                style="@style/TrackInformationTitle"
                android:text="@string/country"/>

            <TextView
                android:id="@+id/track_country_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/track_country_title"
                app:layout_constraintBottom_toBottomOf="@id/track_country_title"
                app:layout_constraintEnd_toEndOf="@id/right_guideline_property"
                style="@style/TrackInformationValue"
                tools:text="Великобритания"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>